[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/MemoryUsage.gd" type="Script" id=1]
[ext_resource path="res://assets/AdventuraTheme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=2]
resource_name = "MemoryDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/StaticUsageValue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "MemoryUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/StaticUsageValue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MemoryUsage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -923.0
margin_bottom = -586.0
rect_min_size = Vector2( 101, 14 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/MemoryDown = SubResource( 2 )
anims/MemoryUp = SubResource( 1 )

[node name="MemoryUsageUpdateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 101.0
margin_bottom = 14.0

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 116.0
margin_bottom = 15.0

[node name="__StaticUsageInfo" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 15.0
text = "static memory:"

[node name="StaticUsageValue" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_left = 102.0
margin_right = 116.0
margin_bottom = 15.0
text = "88"

[connection signal="timeout" from="MemoryUsageUpdateTimer" to="." method="__on_timer_timeout"]
